--- a/style.css
+++ b/style.css
@@ -346,3 +346,51 @@ main {
   margin-top: 5px;
   color: #555;
 }
+
+.close-modal {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background-color: #ED6F1D;
+  border: none;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 1001;
+  font-weight: bold;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  transition: all 0.2s ease-in-out;
+}
+
+.close-modal:hover {
+  background-color: #ba4607;
+  transform: scale(1.1);
+}
+
+
+
+.close-modal:hover {
+  color: #ED6F1D;
+  transform: scale(1.2);
+}
+
+
+.modal-content {
+  position: relative;
+  background: #fff;
+  color: #333;
+  padding: 40px; /* más espacio arriba y a la derecha */
+  border-radius: 12px;
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+  animation: fadeIn 0.3s ease;
+  overflow: visible; /* 👈 importante para que no corte el botón */
+  box-sizing: border-box;
+}
